Commit Cruso-msvc test mejorado